--- a/Threads.Api/appsettings.json
+++ b/Threads.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ThreadsContext": "Server=(localdb)\\mssqllocaldb;Database=Threads_dev;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
 }
