--- a/threads.web/package.json
+++ b/threads.web/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,6 +14,7 @@
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.3.0",
     "formik": "^2.4.2",
     "react": "^18.2.0",
@@ -48,5 +53,10 @@
   "devDependencies": {
     "eslint-config-react-app": "^7.0.1",
     "jest-editor-support": "^31.1.0"
+  },
+  "babelMacros": {
+    "fontawesome-svg-core": {
+      "license": "free"
+    }
   }
 }
