--- a/threads.web/package.json
+++ b/threads.web/package.json
@@ -51,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "dotenv": "^16.3.1",
     "eslint-config-react-app": "^7.0.1",
     "jest-editor-support": "^31.1.0"
   },
