Api: Configure env (appsettings.json)

--- a/Threads.Api/appsettings.Development.json
+++ b/Threads.Api/appsettings.Development.json
@@ -4,5 +4,19 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "ThreadsContext": "Server=(localdb)\\mssqllocaldb;Database=Threads_dev;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "Jwt": {
+    "Issuer": "https://localhost:7019",
+    "Audience": "http://localhost:3000",
+    "Key": "fe3ffd14-cc5b-41ab-9af9-7a44cab590a2"
+  },
+  "CorsPolicy": {
+    "Origins": [
+      "http://localhost:3000",
+      "http://192.168.0.5:3000"
+    ]
   }
 }
