--- a/Threads.Api/appsettings.json
+++ b/Threads.Api/appsettings.json
@@ -5,13 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "ThreadsContext": "Server=(localdb)\\mssqllocaldb;Database=Threads_dev;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
-  "Jwt": {
-    "Issuer": "https://localhost:7019",
-    "Audience": "http://localhost:3000",
-    "Key": "8ffb8ec9-356e-4177-968e-719217bce3ea"
-  }
+  "AllowedHosts": "*"
 }
